; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_mite.c_mite_list_devices.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_mite.c_mite_list_devices.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mite_struct = type { i64, %struct.mite_struct* }

@.str = private unnamed_addr constant [25 x i8] c"Available NI device IDs:\00", align 1
@mite_devices = common dso_local global %struct.mite_struct* null, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c" 0x%04x\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"(used)\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mite_list_devices() #0 {
  %1 = alloca %struct.mite_struct*, align 8
  %2 = alloca %struct.mite_struct*, align 8
  %3 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.mite_struct*, %struct.mite_struct** @mite_devices, align 8
  %5 = icmp ne %struct.mite_struct* %4, null
  br i1 %5, label %6, label %28

6:                                                ; preds = %0
  %7 = load %struct.mite_struct*, %struct.mite_struct** @mite_devices, align 8
  store %struct.mite_struct* %7, %struct.mite_struct** %1, align 8
  br label %8

8:                                                ; preds = %25, %6
  %9 = load %struct.mite_struct*, %struct.mite_struct** %1, align 8
  %10 = icmp ne %struct.mite_struct* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %8
  %12 = load %struct.mite_struct*, %struct.mite_struct** %1, align 8
  %13 = getelementptr inbounds %struct.mite_struct, %struct.mite_struct* %12, i32 0, i32 1
  %14 = load %struct.mite_struct*, %struct.mite_struct** %13, align 8
  store %struct.mite_struct* %14, %struct.mite_struct** %2, align 8
  %15 = load %struct.mite_struct*, %struct.mite_struct** %1, align 8
  %16 = call i32 @mite_device_id(%struct.mite_struct* %15)
  %17 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = load %struct.mite_struct*, %struct.mite_struct** %1, align 8
  %19 = getelementptr inbounds %struct.mite_struct, %struct.mite_struct* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %11
  %23 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %11
  br label %25

25:                                               ; preds = %24
  %26 = load %struct.mite_struct*, %struct.mite_struct** %2, align 8
  store %struct.mite_struct* %26, %struct.mite_struct** %1, align 8
  br label %8

27:                                               ; preds = %8
  br label %28

28:                                               ; preds = %27, %0
  %29 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printk(i8*, ...) #1

declare dso_local i32 @mite_device_id(%struct.mite_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
